分页插件雏形

--- a/examples/assets/css/index.css
+++ b/examples/assets/css/index.css
@@ -4049,3 +4049,47 @@
   text-align: left;
   font-weight: 500;
   border-bottom: 1px solid #f7f7f7; }
+
+.v-pagination {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-size: 0;
+  letter-spacing: 0; }
+  .v-pagination-prev, .v-pagination-item, .v-pagination-next {
+    display: inline-block;
+    border: 1px solid #d9d9d9;
+    min-width: 28px;
+    font-size: 12px;
+    text-align: center;
+    border-radius: 4px;
+    line-height: 26px;
+    cursor: pointer;
+    vertical-align: middle; }
+    .v-pagination-prev > a, .v-pagination-item > a, .v-pagination-next > a {
+      display: inline-block;
+      text-decoration: none;
+      color: #595959; }
+    .v-pagination-prev:hover, .v-pagination-item:hover, .v-pagination-next:hover {
+      border-color: #49a9ee; }
+      .v-pagination-prev:hover > a, .v-pagination-item:hover > a, .v-pagination-next:hover > a {
+        color: #49a9ee; }
+    .v-pagination-prev.active, .v-pagination-item.active, .v-pagination-next.active {
+      background-color: #49a9ee;
+      border-color: #49a9ee; }
+      .v-pagination-prev.active > a, .v-pagination-item.active > a, .v-pagination-next.active > a {
+        color: #FFF; }
+    .v-pagination-prev.disabled, .v-pagination-item.disabled, .v-pagination-next.disabled {
+      border-color: #ddd;
+      cursor: not-allowed; }
+      .v-pagination-prev.disabled > a, .v-pagination-item.disabled > a, .v-pagination-next.disabled > a {
+        color: #ddd;
+        cursor: not-allowed; }
+  .v-pagination-prev {
+    margin-right: 8px; }
+  .v-pagination-item {
+    margin-right: 8px; }
+  .v-pagination-pagesize-select {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 8px; }
