--- a/src/styles/radio/_core.scss
+++ b/src/styles/radio/_core.scss
@@ -1,7 +1,5 @@
 .#{$ui-prefix}-radio{
   display: inline-block;
-  margin-right: 8px;
-  margin-bottom: 12px;
   font-family: $font-family;
   font-size: $font-size-base;
   cursor: pointer;
@@ -74,4 +72,10 @@
       }
     }
   }
+}
+
+
+.#{$ui-prefix}-radio-group{
+  display: inline-block;
+  line-height: 28px;
 }
