组件中加入默认line-height

--- a/src/styles/alert/_core.scss
+++ b/src/styles/alert/_core.scss
@@ -4,6 +4,7 @@
   padding-left: 16px;
   padding-right: 48px;
   position: relative;
+  line-height: 1;
   font-size: $font-size-base;
   font-family: $font-family;
   border-style: solid;
