--- a/src/styles/menu/_core.scss
+++ b/src/styles/menu/_core.scss
@@ -3,6 +3,7 @@
   margin: 0;
   font-family: $font-family;
   font-size: $font-size-base;
+  line-height: 1;
   list-style: none;
   ul {
     padding: 0;
