--- a/src/styles/switch/_core.scss
+++ b/src/styles/switch/_core.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   font-size: $font-size-base;
   font-family: $font-family;
+  line-height: 1;
   cursor: pointer;
   *{
     box-sizing: border-box;
