--- a/src/styles/button/_core.scss
+++ b/src/styles/button/_core.scss
@@ -5,6 +5,7 @@
   line-height: $line-height-base;
   color: $text-color;
   font-size: $font-size-base;
+  line-height: 1;
   background-color: #FFF;
   border: 1px solid $color-default;
   border-radius: 4px;
