--- a/src/styles/form/_core.scss
+++ b/src/styles/form/_core.scss
@@ -1,6 +1,7 @@
 .#{$ui-prefix}-form {
   font-family: $font-family;
   font-size: $font-size-base;
+  line-height: 1;
 }
 
 .#{$ui-prefix}-form-item {
