--- a/src/styles/message/_core.scss
+++ b/src/styles/message/_core.scss
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   z-index: 1000;
+  line-height: 1;
   text-align: center;
   font-family: $font-family;
   font-size: $font-size-base;
