--- a/src/styles/modal/_core.scss
+++ b/src/styles/modal/_core.scss
@@ -1,6 +1,7 @@
 .#{$ui-prefix}-modal {
   font-family: $font-family;
   font-size: $font-size-base;
+  line-height: 1;
   &__mask {
     position: fixed;
     top: 0;
