--- a/src/styles/notification/_core.scss
+++ b/src/styles/notification/_core.scss
@@ -9,6 +9,7 @@
   padding-left:  16px;
   font-family: $font-family;
   font-size: $font-size-base;
+  line-height: 1;
 }
 
 .#{$ui-prefix}-notification-box {
