--- a/src/styles/radio/_core.scss
+++ b/src/styles/radio/_core.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   font-family: $font-family;
   font-size: $font-size-base;
+  line-height: 1;
   cursor: pointer;
 
   &:hover {
