--- a/src/styles/select/_core.scss
+++ b/src/styles/select/_core.scss
@@ -5,7 +5,7 @@
   vertical-align: top;
   font-family: $font-family;
   font-size: $font-size-base;
-
+  line-height: 1;
   *{
     box-sizing: border-box;
   }
