--- a/src/styles/tooltip/_core.scss
+++ b/src/styles/tooltip/_core.scss
@@ -4,6 +4,7 @@ $tooltip-bg: rgba(70, 76, 91, .9);
   display: inline-block;
   font-family: $font-family;
   font-size: $font-size-base;
+  line-height: 1;
   &-wrapper{
     cursor: pointer;
   }
