--- a/src/styles/icon/_core.scss
+++ b/src/styles/icon/_core.scss
@@ -1,12 +1,10 @@
-$icon-url:     './fonts/v-iconfont';
-
 @font-face {
   font-family: "vantd";
-  src: url('#{$icon-url}.eot?t=1494825614962'); /* IE9*/
-  src: url('#{$icon-url}.eot?t=1494825614962#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('#{$icon-url}.woff?t=1494825614962') format('woff'), /* chrome, firefox */
-  url('#{$icon-url}.ttf?t=1494825614962') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('#{$icon-url}.svg?t=1494825614962#vantd') format('svg'); /* iOS 4.1- */
+  src: url('#{$icon-url}.eot'); /* IE9*/
+  src: url('#{$icon-url}.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('#{$icon-url}.woff') format('woff'), /* chrome, firefox */
+  url('#{$icon-url}.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('#{$icon-url}.svg#vantd') format('svg'); /* iOS 4.1- */
 }
 
 .#{$ui-prefix}-icon {
