--- a/src/styles/progress/_core.scss
+++ b/src/styles/progress/_core.scss
@@ -23,6 +23,7 @@
     background-color: $blue-light;
     border-radius: 100px;
     overflow: hidden;
+    transition: width .3s;
   }
   &-text{
     display: inline-block;
