fixed: inline form 文字错位问题

--- a/src/styles/form/_core.scss
+++ b/src/styles/form/_core.scss
@@ -2,6 +2,9 @@
   font-family: $font-family;
   font-size: $font-size-base;
   line-height: 1;
+  *{
+    box-sizing: border-box;
+  }
 }
 
 .#{$ui-prefix}-form-item {
