--- a/src/styles/select/_core.scss
+++ b/src/styles/select/_core.scss
@@ -2,7 +2,7 @@
   position: relative;
   box-sizing: border-box;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   font-family: $font-family;
   font-size: $font-size-base;
   line-height: 1;
