--- a/src/styles/upload/_core.scss
+++ b/src/styles/upload/_core.scss
@@ -14,6 +14,10 @@
       padding: 8px;
       position: relative;
       overflow: hidden;
+      span{
+        font-size: 12px;
+        margin-left: 4px;
+      }
       &.success,
       &.error{
         &:hover{
