--- a/src/styles/upload/_core.scss
+++ b/src/styles/upload/_core.scss
@@ -139,4 +139,78 @@
       }
     }
   }
+  .#{$ui-prefix}-upload-list-picture-card{
+    .#{$ui-prefix}-upload-list-item{
+      display: inline-block;
+      position: relative;
+      margin-right: 12px;
+      margin-bottom: 8px;
+      width: 120px;
+      height: 120px;
+      border-radius: 4px;
+      padding: 0;
+      line-height: 120px;
+      background-color: #F7f7f7;
+      &:hover{
+        .#{$ui-prefix}-upload-list-item-mask{
+           transform: scale(1);
+        }
+      }
+      &-title{
+        display: flex;
+        text-align: center;
+        height: 100%;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        img{
+          max-height: 100%;
+          max-width: 100%;
+          border-radius: 4px;
+        }
+        .v-icon{
+          font-size: 40px;
+        }
+      }
+      &-status{
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 8px;
+        line-height: 1.2;
+      }
+      &-mask{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #FFF;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        text-align: center;
+        background-color: rgba(0, 0, 0, .4);
+        border-radius: 4px;
+        transform: scale(0);
+        transition: all .3s;
+
+        span{
+          padding: 8px;
+          cursor: pointer;
+          .v-icon{
+            font-size: 16px;
+          }
+        }
+      }
+      &-progress{
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        font-size: 0;
+        padding-bottom: 2px;
+      }
+    }
+  }
 }
