--- a/src/styles/table/_core.scss
+++ b/src/styles/table/_core.scss
@@ -1,47 +1,56 @@
 .#{$ui-prefix}-table{
   border-radius: 4px;
-  line-height: 1;
   font-size: $font-size-base;
   font-family: $font-family;
+  *{
+    box-sizing: border-box;
+  }
   table{
     width: 100%;
     border-collapse: separate;
     border-spacing: 0;
     overflow: hidden;
+    thead>tr>th{
+      padding: 12px 6px;
+      color: $heading-color;
+      text-align: left;
+      line-height: 1.2;
+      font-weight: 500;
+      background-color: #F7f7f7;
+    }
+    tbody>tr{
+      &:hover{
+        background-color: rgba($blue-light, .1);
+      }
+    }
+    tbody>tr>td{
+      padding: 12px 6px;
+      color: $text-color;
+      text-align: left;
+      line-height: 1.2;
+      font-weight: 500;
+      border-bottom: 1px solid #f7f7f7;
+    }
+  }
+  .v-checkbox-group{
+    display: block;
   }
 }
 
-.#{$ui-prefix}-table-head {
-  @at-root {
-    &-wrapper {
-
+.#{$ui-prefix}-table-small{
+  table{
+    thead>tr>th,
+    tbody>tr>td{
+      padding: 8px 4px;
     }
-  }
-  thead>tr>th{
-    padding: 8px 4px;
-    color: $heading-color;
-    text-align: left;
-    font-weight: 500;
-    background-color: #F7f7f7;
   }
 }
 
-.#{$ui-prefix}-table-body{
-  @at-root {
-    &-wrapper {
-
+.#{$ui-prefix}-table-large{
+  table{
+    thead>tr>th,
+    tbody>tr>td{
+      padding: 16px 8px;
     }
-  }
-  tbody>tr{
-    &:hover{
-      background-color: rgba($blue-light, .1);
-    }
-  }
-  tbody>tr>td{
-    padding:8px 4px;
-    color: $text-color;
-    text-align: left;
-    font-weight: 500;
-    border-bottom: 1px solid #f7f7f7;
   }
 }
