--- a/src/styles/upload/_core.scss
+++ b/src/styles/upload/_core.scss
@@ -145,9 +145,9 @@
       display: inline-block;
       width: 120px;
       height: 120px;
-      vertical-align: top;
       margin-right: 12px;
       margin-bottom: 8px;
+      vertical-align: middle;
       button{
         height: 100%;
         width: 100%;
@@ -169,6 +169,7 @@
       padding: 0;
       line-height: 120px;
       background-color: #F7f7f7;
+      vertical-align: middle;
       &:hover{
         .#{$ui-prefix}-upload-list-item-mask{
            transform: scale(1);
