--- a/src/styles/dropdown/_core.scss
+++ b/src/styles/dropdown/_core.scss
@@ -30,6 +30,7 @@
   border-radius: 4px;
   background-color: #FFFFFF;
   list-style: none;
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .2);
 }
 
 .#{$ui-prefix}-dropdown-item{
