--- a/src/styles/popper/_core.scss
+++ b/src/styles/popper/_core.scss
@@ -31,6 +31,15 @@
       width: 0;
       height: 0;
       border-style: solid;
+
+      &::after{
+        content: " ";
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        border-style: solid;
+      }
     }
     // top
     &.top,
@@ -39,9 +48,19 @@
        padding-bottom: 6px;
       .#{$ui-prefix}-popper__arrow {
         border-bottom: none;
-        border-top: 6px solid #FFF;
+        border-top: 6px solid rgba(#555, .1);
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
+
+        &::after{
+          bottom: 1px;
+          left: 50%;
+          margin-left: -6px;
+          border-top: 6px solid #FFF;
+          border-bottom: none;
+          border-left: 6px solid transparent;
+          border-right: 6px solid transparent;
+        }
       }
     }
     &.top {
@@ -72,7 +91,16 @@
         border-top: none;
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
-        border-bottom: 6px solid #FFF;
+        border-bottom: 6px solid rgba(#555, .1);
+        &::after{
+          top: 1px;
+          left: 50%;
+          margin-left: -6px;
+          border-top: none;
+          border-left: 6px solid transparent;
+          border-right: 6px solid transparent;
+          border-bottom: 6px solid #FFF;
+        }
       }
     }
     &.bottom {
@@ -103,8 +131,17 @@
       .#{$ui-prefix}-popper__arrow {
         border-top: 6px solid transparent;
         border-bottom: 6px solid transparent;
-        border-left: 6px solid #FFF;
+        border-left: 6px solid rgba(#555, .1);
         border-right: none;
+        &::after{
+          right: 1px;
+          top: 50%;
+          margin-top: -6px;
+          border-top: 6px solid transparent;
+          border-bottom: 6px solid transparent;
+          border-left: 6px solid #FFF;
+          border-right: none;
+        }
       }
     }
     &.left {
@@ -135,8 +172,17 @@
       .#{$ui-prefix}-popper__arrow {
         border-top: 6px solid transparent;
         border-bottom: 6px solid transparent;
-        border-right: 6px solid #FFF;
+        border-right: 6px solid rgba(#555, .1);
         border-left: none;
+        &::after{
+          left: 1px;
+          top: 50%;
+          margin-top: -6px;
+          border-top: 6px solid transparent;
+          border-bottom: 6px solid transparent;
+          border-right: 6px solid #FFF;
+          border-left: none;
+        }
       }
     }
     &.right {
