--- a/src/styles/popover/_core.scss
+++ b/src/styles/popover/_core.scss
@@ -7,6 +7,7 @@
     background: #FFF;
     border-radius: 4px;
     box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .2);
+    overflow: hidden;
   }
   &-header{
     &-default{
