--- a/src/styles/tooltip/_core.scss
+++ b/src/styles/tooltip/_core.scss
@@ -5,7 +5,7 @@ $tooltip-bg: rgba(70, 76, 91, .9);
   font-family: $font-family;
   font-size: $font-size-base;
   line-height: 1;
-  &-wrapper{
+  &-wrapper {
     cursor: pointer;
   }
   &-content {
@@ -18,6 +18,21 @@ $tooltip-bg: rgba(70, 76, 91, .9);
     background-color: $tooltip-bg;
   }
   .#{$ui-prefix}-popper {
+    .#{$ui-prefix}-popper__arrow {
+      position: absolute;
+      display: block;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      &::after {
+        content: " ";
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        border-style: solid;
+      }
+    } // top
     &.top,
     &.top-start,
     &.top-end {
@@ -25,9 +40,17 @@ $tooltip-bg: rgba(70, 76, 91, .9);
       .#{$ui-prefix}-popper__arrow {
         border-bottom: none;
         border-top: 6px solid $tooltip-bg;
-        ;
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
+        &::after {
+          bottom: 1px;
+          left: 50%;
+          margin-left: -6px;
+          border-top: 6px solid $tooltip-bg;
+          border-bottom: none;
+          border-left: 6px solid transparent;
+          border-right: 6px solid transparent;
+        }
       }
     }
     &.top {
@@ -58,7 +81,15 @@ $tooltip-bg: rgba(70, 76, 91, .9);
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
         border-bottom: 6px solid $tooltip-bg;
-        ;
+        &::after {
+          top: 1px;
+          left: 50%;
+          margin-left: -6px;
+          border-top: none;
+          border-left: 6px solid transparent;
+          border-right: 6px solid transparent;
+          border-bottom: 6px solid $tooltip-bg;
+        }
       }
     }
     &.bottom {
@@ -88,8 +119,16 @@ $tooltip-bg: rgba(70, 76, 91, .9);
         border-top: 6px solid transparent;
         border-bottom: 6px solid transparent;
         border-left: 6px solid $tooltip-bg;
-        ;
         border-right: none;
+        &::after {
+          right: 1px;
+          top: 50%;
+          margin-top: -6px;
+          border-top: 6px solid transparent;
+          border-bottom: 6px solid transparent;
+          border-left: 6px solid $tooltip-bg;
+          border-right: none;
+        }
       }
     }
     &.left {
@@ -119,8 +158,16 @@ $tooltip-bg: rgba(70, 76, 91, .9);
         border-top: 6px solid transparent;
         border-bottom: 6px solid transparent;
         border-right: 6px solid $tooltip-bg;
-        ;
         border-left: none;
+        &::after {
+          left: 1px;
+          top: 50%;
+          margin-top: -6px;
+          border-top: 6px solid transparent;
+          border-bottom: 6px solid transparent;
+          border-right: 6px solid $tooltip-bg;
+          border-left: none;
+        }
       }
     }
     &.right {
