fixed: select选项过多和选项字数过长导致的样式问题

--- a/src/styles/select/_core.scss
+++ b/src/styles/select/_core.scss
@@ -59,6 +59,9 @@
   border: 1px solid $color-default;
   border-radius: 4px;
   cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   &:focus{
     outline: none;
@@ -211,6 +214,8 @@
   background-color: #FFF;
   border-radius:  4px;
   list-style: none;
+  max-height: 200px;
+  overflow-y: scroll;
 
   ul {
     padding: 0;
