--- a/components/styles/themes/default.scss
+++ b/components/styles/themes/default.scss
@@ -38,7 +38,7 @@ $grid-columns           : 24 !default;
 $grid-breakpoints       : (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px) !default;
 
 // BUTTON
-$btn-padding-small      : 4px 8px;
-$btn-padding-base       : 8px 16px;
-$btn-padding-large      : 10px 20px;
+$btn-height-sm          : 24px;
+$btn-height-base        : 28px;
+$btn-height-lg          : 32px;
 
